packages/spec/src/grammar/lox.grammar
program     -> declaration* EOF ;

declaration -> varDecl
             | statement ;

varDecl     -> "var" IDENTIFIER ( "=" expression )? ";" ;

statement   -> exprStmt
             | printStmt
             | block ;

block       -> "{" declaration* "}" ;

exprStmt    -> expression ";" ;
printStmt   -> "print" expression ";" ;

expression  -> assignment ;
assignment  -> IDENTIFIER "=" assignment
             | equality ;
equality    -> comparison (( '!=' | '==' ) comparison )* ;
comparison  -> term (( '>' | '>=' | '<' | '<=' ) term )* ;
term        -> factor (( '-' | '+' ) factor )* ;
factor      -> unary (( '/' | '*' ) unary )* ;
unary       -> ( '!' | '-' ) unary
             | primary ;
primary     -> 'true' | 'false' | 'nil'
             | NUMBER | STRING
             | '(' expression ')'
             | IDENTIFIER ;

# precedence:
# NAME           OPERATORS    ASSOCIATES
# Equality       == !=        Left
# Comparison     > >= < <=    Left
# Term           - +          Left
# Factor         / *          Left
# Unary          ! -          Right
